--- a/css/estilo.css
+++ b/css/estilo.css
@@ -141,6 +141,15 @@ p{
     font-family:'Poppins', sans-serif;
     font-size: 25px;
 }
+h5{
+    text-align: center;
+    padding:20px;
+    color: black;
+    font-size: 40px;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
 .container-all{
     width:100%;
     max-width: 1000px;
@@ -181,4 +190,74 @@ p{
     grid-auto-rows: 300px;
     gap:20px;
     padding: 60px;
+}
+.h7{
+    text-align: center;
+    margin-top: 10px;
+}
+.form-register{
+    width: 400px;
+    background: #7a7a7a;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+}
+.form-register h6{
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+.controls{
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #b07cb9;
+    font-family:'Calibri';
+    font-size: 18px;
+}
+.h7{
+    text-align: center;
+    margin-top: 10px;
+}
+.form-register .button{
+    width:100%;
+    background: rgb(131, 86, 131);
+    border: 4px;
+    padding: 12px;
+    color: white;
+    margin: 50px 0;
+    font-size: 16px;
+}
+.form-register h6{
+    text-align: center;
+}
+.row2{
+    padding: 50px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 0px;
+}
+.row2 img{
+    margin-right: .9px;
+    margin-bottom: 250px;
+}
+
+footer{
+    background-color: grey;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    padding: 1em 0;
+    margin-top: 50px;
+    bottom: 0;
+}
+footer p{
+    text-align: center;
+    margin-top: 10px;
+}
+.buttons{
+    justify-content: space-around;
 }
